--- a/04_bootstrap.html
+++ b/04_bootstrap.html
@@ -17,7 +17,7 @@
         <a class="nav-link disabled" aria-disabled="true">Disabled</a>
     </nav>
 
-    <h1>hello</h1>
+    <h1 class="d-flex justify-content-center">Page</h1>
     
     <div class="card ms-3 mb-3 p-2"  style="width: 18rem;">
         <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS7LpapIl8DITfz4_Y2z7pqs7FknPkjReAZCg&s" class="card-img-top" alt="dog">
@@ -34,11 +34,31 @@
     <div class="alert alert-warning" role="alert">
         A simple warning alert-check it out!
     </div>
-    <button class="btn btn-primary">버튼</button>
-    <button class="btn btn-danger">취소</button>
+   
+    <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="..." class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="..." class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="..." class="d-block w-100" alt="...">
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+    </div>
 
-    <div class="border border-primary border-3 mt-3 rounded-3" style="height: 100px; width: 100px; background-color: red;">
 
+   
     </div>
     <!-- 자바스크립트 코드 -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
